--- a/package.json
+++ b/package.json
@@ -2,15 +2,6 @@
     "name": "maib-mia-sdk",
     "version": "1.0.0",
     "description": "Node.js SDK for maib MIA API",
-    "main": "src/index.js",
-    "types": "types/index.d.ts",
-    "scripts": {
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage",
-        "lint": "eslint src/**/*.js",
-        "lint:fix": "eslint src/**/*.js --fix"
-    },
     "keywords": [
         "maib",
         "moldova",
@@ -21,19 +12,28 @@
         "api",
         "sdk"
     ],
-    "author": "Alexander Minza",
-    "license": "GPL-3.0",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/alexminza/maib-mia-sdk-node"
-    },
+    "homepage": "https://github.com/alexminza/maib-mia-sdk-node",
     "bugs": {
         "url": "https://github.com/alexminza/maib-mia-sdk-node/issues"
     },
-    "homepage": "https://github.com/alexminza/maib-mia-sdk-node",
-    "engines": {
-        "node": ">=14.0.0",
-        "npm": ">=6.0.0"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/alexminza/maib-mia-sdk-node.git"
+    },
+    "license": "GPL-3.0",
+    "author": "Alexander Minza",
+    "type": "commonjs",
+    "main": "src/index.js",
+    "types": "types/index.d.ts",
+    "directories": {
+        "test": "test"
+    },
+    "scripts": {
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "lint": "eslint src/**/*.js",
+        "lint:fix": "eslint src/**/*.js --fix"
     },
     "dependencies": {
         "axios": "^1.6.0"
@@ -43,5 +43,9 @@
         "eslint": "^8.50.0",
         "jest": "^29.7.0",
         "dotenv": "^16.3.0"
+    },
+    "engines": {
+        "node": ">=18.0.0",
+        "npm": ">=6.0.0"
     }
 }
