--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "author": "Alexander Minza",
     "type": "commonjs",
     "main": "src/index.js",
+    "files": [
+        "src"
+    ],
     "directories": {
         "test": "test"
     },
