--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
         "axios": "^1.6.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.39.2",
         "@types/node": "^20.0.0",
-        "eslint": "^8.50.0",
-        "jest": "^29.7.0",
-        "dotenv": "^16.3.0"
+        "dotenv": "^16.3.0",
+        "eslint": "^9.39.2",
+        "globals": "^16.5.0",
+        "jest": "^29.7.0"
     },
     "engines": {
         "node": ">=18.0.0",
