--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,20 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "npm: lint",
 			"type": "npm",
 			"script": "lint",
 			"problemMatcher": [
 				"$eslint-stylish"
 			],
-			"label": "npm: lint",
 			"detail": "eslint src/ test/"
+		},
+		{
+			"label": "npm: publish",
+			"type": "shell",
+			"command": "npm publish",
+			"problemMatcher": [],
+			"detail": "Publish the package to the npm registry"
 		}
 	]
 }
