--- a/.github/workflows/action-npm-publish.yml
+++ b/.github/workflows/action-npm-publish.yml
@@ -14,6 +14,9 @@ permissions:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment:
+      name: npm
+      url: https://www.npmjs.com/package/maib-mia-sdk
     steps:
       - uses: actions/checkout@v4
 
