--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "test:coverage": "jest --coverage",
         "lint": "eslint src/ test/",
         "lint:fix": "eslint src/ test/ --fix",
-        "prepublishOnly": "npm test && npm run lint"
+        "_prepublishOnly": "npm test && npm run lint"
     },
     "dependencies": {
         "axios": "^1.6.0"
